first design without mobile view

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -1,6 +1,9 @@
 
 $popover-max-width:534px;
-
+//$primary: #363636;
+//$dark: #fff;
+//$black: #fff;
+//$card-bg: #4a4a4a;
 
 
 @import "../../node_modules/bootstrap/scss/bootstrap";
