Seond Ui with mobile view

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600;700;800&family=Padauk:wght@400;700&display=swap');
+$font-family-sans-serif : 'Montserrat', 'Padauk';
 
 $popover-max-width:534px;
 //$primary: #363636;
